<resources>
    <string name="app_name">ARK Memo</string>
    <string name="app_author">ARK Builders</string>
    <string name="app_copyright">Copyright ©2024</string>
    <string name="app_name_debug">ARK Memo [Debug]</string>
    <string name="crash_dialog_desc">Sorry, the application crashed. Please send a report to the developers.</string>
    <string name="crash_dialog_title">Crash</string>
    <string name="crash_dialog_comment">You can add a comment here:</string>
    <string name="file_picker_title">Choose folder</string>
    <string name="select">Select</string>
    <string name="no_file_access">Failed, allow ARK-Memo to access your files.</string>
    <string name="new_note">New note</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="about">About</string>
    <string name="path_pref_key">Path</string>
    <string name="choose_folder">Choose folder to save your notes</string>
    <string name="no_folder">No folder</string>
    <string name="your_notes">Your notes</string>
    <string name="save">Save</string>
    <string name="edit_note">Edit note</string>
    <string name="delete_note">Delete note</string>
    <string name="note_deleted">Note deleted successfully</string>
    <string name="start_text_note">Start editing your text note here</string>
    <string name="paste">Paste</string>
    <string name="nothing_to_paste">Nothing to paste</string>
    <string name="ark_memo_ok">OK</string>
    <string name="ark_memo_cancel">Cancel</string>
    <string name="ark_memo_delete_warn">Are you sure you want to delete this note? This action cannot be undone.</string>
    <string name="ark_memo_note_existing">Note already exists</string>
    <string name="ark_memo_note_saved">Note saved successfully</string>
    <string name="note_title">Title</string>
    <string name="ark_memo_just_now">Just now</string>
    <string name="ark_memo_graphic_note">Graphic note %1$s</string>
    <string name="ark_memo_add_new_note">New note</string>
    <string name="ark_memo_close">Close</string>
    <string name="ark_memo_voice_note">Voice note %1$s</string>
    <string name="ark_memo_record">Record</string>
    <string name="ark_memo_stop">Stop</string>
    <string name="ark_memo_duration">Duration</string>
    <string name="ark_memo_duration_default">00:00</string>
    <string name="create_note_description_title">Description</string>
    <string name="hint_new_text_note">New text note</string>
    <string name="hint_new_graphical_note">New graphical note</string>
    <string name="hint_new_note_description">Put description for this note</string>

    <!-- New UI design -->
    <string name="ark_memo_no_notes_instructions">Tap "+" to create your first memo.\nCapture ideas, tasks, and notes all in one place.</string>
    <string name="ark_memo_no_notes_header">Empty Here, But Full of Possibilities!</string>
    <string name="ark_memo_new_memo">New Memo</string>
    <string name="ark_memo_paste">Paste</string>
    <string name="ark_memo_done">Done</string>
    <string name="ark_memo_notes_title_pinned">Pinned</string>
    <string name="ark_memo_notes_title_recent">Recent</string>
    <string name="ark_memo_search">Search</string>
    <string name="ark_memo_search_result_empty">No result</string>
    <string name="photo_and_video">Photo &amp; Video</string>
    <string name="fab_create_drawing_text">Drawing</string>
    <string name="fab_attach_file">Attach File</string>
    <string name="fab_record_voice">Record Voice</string>
    <string name="fab_simple_memo">Simple Memo</string>
    <string name="light_mode">Light Mode</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="support">Support</string>
    <string name="dialog_save_note_title">Save changes</string>
    <string name="dialog_save_note_message">Are you sure you want to leave without saving your changes?</string>
    <string name="discard">Discard</string>
    <string name="ark_memo_default_text_note_title">Untitled</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_replace_recording_title">Are you sure</string>
    <string name="dialog_replace_recording_message">Are you sure you want to replace the recording with a new one?</string>
    <string name="dialog_replace_recording_positive_text">Replace</string>
    <string name="graphic_control_brush">Brush</string>
    <string name="graphic_control_eraser">Eraser</string>
    <string name="graphic_control_color">Color</string>
    <string name="brush_size_label">Size</string>
    <string name="audio_record_guide_text_replace">Tap “microphone button” to \nreplace with a new one</string>
    <string name="audio_record_guide_text_new">Tap “microphone button” to record</string>
    <string name="content_desc_back_button">Back</string>
    <string name="note_last_modified_time">Last edited %s</string>
    <string name="setting_app_version">Version %s</string>
    <string name="setting_telegram_title">Telegram</string>
    <string name="setting_discord_title">Discord</string>
    <string name="setting_support_us_title">Support us</string>
    <string name="setting_support_us_description">We greatly appreciate every bit of support</string>
    <string name="setting_website">Website</string>
    <string name="setting_donate_btc">Donate using BTC</string>
    <string name="setting_donate_wallet_clipboard_label">Wallet address</string>
    <string name="setting_donate_eth">Donate using ETH</string>
    <string name="setting_donate_patreon">Donate on Patreon</string>
    <string name="setting_donate_coffee">Buy us a coffee</string>
    <string name="setting_contribute_title">Contribute with us</string>
    <string name="setting_contribute_issues">Discover issues to work on</string>
    <string name="setting_contribute_bounties">See open bounties</string>
    <string name="dialog_donate_qr_message">Send us the transaction id by email support@ark-builders.dev to receive premium support. We’ll make our best to help you with any issue you encounter while using our Software.</string>
    <string name="dialog_donate_qr_copy">Copy</string>
    <string name="dialog_donate_qr_download">Download QR image</string>
    <string name="toast_save_qr_success">QR saved at %s</string>
    <string name="tips_will_be_available_soon">Will be available soon!</string>
    <string name="toast_invalid_recording">Invalid recording file</string>
    <string name="ark_memo_play_pause">Play/Pause</string>
    <string name="blur_intensity">Intensity</string>
    <string name="blur_size">Size</string>
    <string name="ark_retouch_crop_free">Free\n</string>


    <string name="name">Name</string>
    <string name="overwrite_original_file">Overwrite original file</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="location">Location</string>
    <string name="pick_folder">Pick folder</string>
    <string name="open">Open</string>
    <string name="or">Or</string>
    <string name="new_">New</string>
    <string name="crop">Crop</string>
    <string name="ark_retouch_crop_square">Square</string>
    <string name="ark_retouch_crop_9_16">9:16</string>
    <string name="ark_retouch_crop_2_3">2:3</string>
    <string name="ark_retouch_crop_4_5">4:5</string>
    <string name="options">Options</string>
    <string name="share">Share</string>
    <string name="clear">Clear</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="digits_only">Input digits only</string>
    <string name="width_too_large">Width should be less than %d</string>
    <string name="height_too_large">Height should be less than %d</string>
    <string name="crash_dialog_description">Sorry, the application crashed. Please send a report to the developers.</string>
    <string name="pick_color">Pick a color please</string>
    <string name="background">Background</string>
    <string name="height_not_accepted">Height cannot be %s</string>
    <string name="width_not_accepted">Width cannot be %s</string>
    <string name="width_empty">Please enter width</string>
    <string name="height_empty">Please enter height</string>
    <string name="ark_retouch_notify_choose_folder">Please pick folder to save image</string>
    <string name="ark_retouch_notify_missing_file_name">Please provide file name</string>

</resources>