<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextLarge"
        android:textColor="@color/text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/delete_note"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_title"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:padding="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/iv_close"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextSmall"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/iv_close"
        app:layout_constraintEnd_toEndOf="@+id/iv_close"
        android:text="@string/ark_memo_delete_warn"
        android:id="@+id/tv_message"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PositiveButton"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/action_delete"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="@+id/iv_close"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        android:layout_marginTop="24dp"
        android:id="@+id/tv_positive"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/NegativeButton"
        android:text="@string/cancel"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="@+id/iv_close"
        app:layout_constraintTop_toBottomOf="@+id/tv_positive"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/common_padding"
        android:id="@+id/tv_negative"
        android:layout_marginBottom="@dimen/common_padding"/>


</androidx.constraintlayout.widget.ConstraintLayout>