<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recorder_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="gone"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold"
        android:hint="@string/ark_memo_duration_default"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>
    <dev.arkbuilders.arkmemo.ui.views.WaveView
        android:id="@+id/wave_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_pause_resume"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pause"
        android:contentDescription="@string/ark_memo_stop" />
    <ImageView
        android:id="@+id/iv_record"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_record"
        android:contentDescription="@string/ark_memo_record"
        app:tint="@color/red"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>