<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include layout="@layout/layout_brush_size_chooser"
        android:id="@+id/layout_size_chooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/common_padding"
        tools:visibility="visible"
        android:visibility="gone"/>

    <include layout="@layout/layout_brush_color_chooser"
        android:id="@+id/layout_color_chooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        android:id="@+id/barrier_choosers"
        app:constraint_referenced_ids="layout_color_chooser,layout_size_chooser"/>

    <dev.arkbuilders.arkmemo.ui.views.GraphicControlTextView
        android:id="@+id/tv_brush_size"
        style="@style/ActionTextView"
        tools:drawableStart="@drawable/ic_brush"
        app:gct_drawable="@drawable/ic_brush"
        android:drawablePadding="8dp"
        android:layout_marginVertical="12dp"
        android:text="@string/graphic_control_brush"
        android:textStyle="normal"
        android:textColor="@color/fg_secondary"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/tv_eraser"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier_choosers"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <dev.arkbuilders.arkmemo.ui.views.GraphicControlTextView
        android:id="@+id/tv_eraser"
        style="@style/ActionTextView"
        android:drawableStart="@drawable/ic_eraser"
        app:gct_drawable="@drawable/ic_eraser"
        android:drawablePadding="8dp"
        android:text="@string/graphic_control_eraser"
        android:textColor="@color/fg_secondary"
        android:textStyle="normal"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_brush_size"
        app:layout_constraintEnd_toStartOf="@+id/tv_brush_color"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tv_brush_size"
        app:layout_constraintTop_toTopOf="@+id/tv_brush_size" />

    <dev.arkbuilders.arkmemo.ui.views.GraphicControlTextView
        android:id="@+id/tv_brush_color"
        style="@style/ActionTextView"
        android:drawableStart="@drawable/ic_selected_brush_type"
        app:gct_drawable="@drawable/ic_selected_brush_type"
        app:gct_icon_tint="@color/black"
        android:drawablePadding="8dp"
        android:text="@string/graphic_control_color"
        android:textColor="@color/fg_secondary"
        android:textStyle="normal"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_eraser"
        app:layout_constraintTop_toTopOf="@id/tv_eraser"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tv_eraser"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>