<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextLarge"
        android:textColor="@color/text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/setting_donate_btc"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_title"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:padding="10dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/iv_close"
        android:contentDescription="@string/ark_memo_close" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextSmall"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/iv_close"
        app:layout_constraintEnd_toEndOf="@+id/iv_close"
        android:text="@string/dialog_donate_qr_message"
        android:autoLink="email"
        android:linksClickable="true"
        android:id="@+id/tv_message"/>
    
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        android:layout_marginTop="16dp"
        android:id="@+id/iv_qr"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="@+id/iv_close"
        app:layout_constraintTop_toBottomOf="@+id/iv_qr"
        android:layout_marginTop="24dp"
        android:id="@+id/layout_wallet_address"
        android:background="@drawable/bg_border_r8">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/layout_copy"
            android:layout_marginVertical="@dimen/medium_margin"
            android:layout_marginHorizontal="12dp"
            android:lines="1"
            android:ellipsize="middle"
            tools:text="bc1qx8n9r4uwpgrhgnamt2uew53lmrxd8tuevp7lv5"
            app:layout_constraintHorizontal_weight="0.7"
            android:id="@+id/tv_address"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.3"
            android:background="@drawable/ripple_donate_copy_text"
            android:id="@+id/layout_copy">

            <TextView
                android:id="@+id/tv_copy"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/copy"
                android:textColor="@color/text_secondary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawablePadding="4dp"
                app:drawableTint="@color/fg_secondary"
                app:drawableStartCompat="@drawable/ic_copy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="@+id/iv_close"
        app:layout_constraintTop_toBottomOf="@+id/layout_wallet_address"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="@dimen/common_padding"
        android:background="@drawable/ripple_support_text"
        android:id="@+id/layout_download_qr">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextMedium"
            android:paddingVertical="10dp"
            android:text="@string/dialog_donate_qr_download"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            app:drawableTint="@color/fg_secondary"
            app:drawableStartCompat="@drawable/ic_download"
            android:drawablePadding="6dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>